tests/errors/integer16.f90
program integer16
	integer*16 x
end
